update hbase